# Beatrice

./: .gitignore  ADR-graph-knowledge-architecture.md  AGENTS.md  Makefile  PLAN.md  README.md  demo.py  graph.json  pyproject.toml  spec-beatrice-web-v1.md
beatrice/: __main__.py  cli.py
beatrice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
beatrice/tui/: __init__.py  app.py  graph_manager.py  messages.py
beatrice/tui/widgets/: command_palette.py  dialogs.py  help_screen.py  links_list.py  node_form.py  nodes_list.py
beatrice/web_gui/: __init__.py  __main__.py  server.py
beatrice/web_gui/frontend/: package.json  vite.config.ts
beatrice/web_gui/frontend/src/: App.tsx
beatrice/web_gui/frontend/src/api/: types.ts  websocket.ts
beatrice/web_gui/frontend/src/components/: Layout.tsx
beatrice/web_gui/frontend/src/components/GraphView/: GraphView.tsx
beatrice/web_gui/frontend/src/components/NodeEditor/: EdgeList.tsx  NodeEditor.tsx  NodeEditorForm.tsx  TagsEditor.tsx
beatrice/web_gui/frontend/src/components/NodesList/: NodesList.tsx
beatrice/web_gui/frontend/src/store/: context.ts  graphStore.ts
beatrice/web_gui/frontend/src/styles/: global.css
docs/: data-model.md  data-model.puml  web-gui.md
pi/skills/beatrice/: SKILL.md
plans/: tui.md
skills/beatrice/: SKILL.md
tests/: test_cli.py  test_tui.py
